   output directly to a file.  [T6550]

 * Extended gpgme_op_encrypt*, gpgme_op_encrypt_sign*, and gpgme_op_sign*
   to allow reading the input data directly from a file.  [T6550]

 * Add information about designated revocation keys.  [T7118]

 * New context flag "import-options".  [T7152]

 * New context flag "proc-all-sigs".  [T7261]

 * New function gpgme_op_setownertrust to make changing the owner trust
   easier and to allow enabling/disabling of keys (requires GnuPG 2.4.6).
   [T7239]

 * New flag to re-encrypt OpenPGP data (requires GnuPG 2.5.1).  [T1825]

 * cpp: Provide information about designated revocation keys for a Key.
   [T7118]

 * cpp: Add safer member function returning text describing an error.
   [T5960]

 * cpp: Add support for setting the owner trust of keys and for enabling
   and disabling keys.  [T7239]

 * qt: Build QGpgME for Qt 5 and Qt 6 simultaneously.  [T7205]

 * qt: Install headers for Qt 5 and Qt 6 in separate folders.  [T7161]

 * qt: Allow reading the data to decrypt/encrypt/sign/verify directly from
   files.  [T6550]

 * qt: Allow writing the decrypted/encrypted/signed/verified data directly
   to files.  [T6550]

 * qt: Allow specifying import options when importing keys.  [T7152]

 * qt: Allow appending a detached signature to an existing file.  [T6867]

 * qt: Add support for enabling and disabling keys.  [T7239]

 * qt: Add support for new context flag "proc-all-sigs" to the jobs that
   verify data signatures.

 * Interface changes relative to the 1.23.2 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_ENCRYPT_FILE                      NEW.
 GPGME_SIG_MODE_FILE                     NEW.
 GPGME_ENCRYPT_ADD_RECP                  NEW.
 GPGME_ENCRYPT_CHG_RECP                  NEW.
 gpgme_key_t                             EXTENDED: New field 'revkeys'.
 gpgme_revocation_key_t                  NEW.
 gpgme_set_ctx_flag                      EXTENDED: New flag 'import-options'.